--- a/About-Us.html
+++ b/About-Us.html
@@ -2,7 +2,7 @@
 <html style="font-size: 16px;" lang="en-GB"><head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <meta name="keywords" content="Windows Treorchy; Windows Ystrad: Windows Gelli; Windows Ton Pentre; Windows South Wales; Window; Door; Windor; Glass; Replacement Windows; Save Money on Windows; Window Sale; New Windows near me; new windows treorchy; new windows bridgend; window companies near me; window installers near me; window showroom near me; ">
+    <meta name="keywords" content="Windows Treorchy; Windows Ystrad: Windows Gelli; Windows Ton Pentre; Windows South Wales; Window; Door; Windor; Glass; Replacement Windows; Save Money on Windows; Window Sale; New Windows near me; new windows treorchy; new windows bridgend; window companies near me; window installers near me; window showroom near me;  windows near me; windows &amp;amp; doors near me; windows; Doors; Conservatories; conservatory; composite door; Bi-fold doors; windows bridgend; windows rhondda cynon taff; windows RCT; Window specialists; cheap windows and doors; cheap windows; low cost windows; low cost doors; front door; bay windows; glass replacement; ">
     <meta name="description" content="">
     <title>About Us</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
@@ -19,7 +19,7 @@
     <script type="application/ld+json">{
 		"@context": "http://schema.org",
 		"@type": "Organization",
-		"name": "Site2",
+		"name": "Decembver 2024",
 		"logo": "images/Ecoshield-LogoFinal.png"
 }</script>
     <meta name="theme-color" content="#478ac9">
@@ -27,17 +27,6 @@
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-JRE50C2H7Q"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-JRE50C2H7Q');
-</script>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-JRE50C2H7Q"></script>
   <body data-path-to-root="./" data-include-products="false" class="u-body u-xl-mode" data-lang="en"><header class=" u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-clearfix u-header u-section-row-container" id="sec-41f8" style="background-image: none"><div class="u-section-rows">
         <div class="u-clearfix u-section-row u-sticky u-sticky-2c1b u-white u-section-row-1" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="" id="sec-d51d">
           <div class="u-clearfix u-sheet u-sheet-1">
@@ -107,9 +96,13 @@
         </div>
       </div></header>
     <section class="u-clearfix u-section-1" id="sec-ab9d">
-      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <p class="u-align-center u-text u-text-1">
-          <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1" data-href="https://www.facebook.com/profile.php?id=61556774094652" data-target="_blank">To find out more about Graham and Philip - a.k.a EcoShield Windows, please follow our journey on Facebook. 😀😀</a>
+      <div class="u-clearfix u-sheet u-sheet-1">
+        <h6 class="u-align-left u-text u-text-1"> EcoShield Windows Ltd. is the culmination of a 30-year friendship between Philip and Graham, and shared passion for quality window and door installations.&nbsp;We're proud to be a local business based in&nbsp; Rhondda Cynon Taff founded by two lifelong friends with extensive experience in the industry.&nbsp;<br>
+          <br>Our journey began unexpectedly after UK Window &amp; Door Group entered administration making us and 900 collegues and friends redundent.  Rather than seeing this as a setback, we saw an opportunity.  We knew we had the skills and expertise to offer something truly special to homeowners in our community.&nbsp;<br>
+          <br>At EcoShield Windows, we believe in combining top-tier products with exceptional craftsmanship.  Whether you're looking for energy-efficient PVC windows, sleek aluminium bi-folds, a stylish new composite door, or a Conservatory as the centerpiece to your home we're dedicated to providing personalised service and installations that exceed expectations.
+        </h6>
+        <p class="u-align-center u-text u-text-2">
+          <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1" data-href="https://www.facebook.com/profile.php?id=61556774094652" data-target="_blank">To find out more about our journey, please follow us on Facebook.</a>
         </p>
       </div>
     </section>
@@ -118,14 +111,14 @@
     
     <footer class="u-clearfix u-custom-color-6 u-footer" id="sec-59bd"><div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-text u-text-default-xs u-text-white u-text-1">Contact Us<br>
-          <br>Address: <br> Unit 16 Parc Busnes&nbsp;<br>Abergorki Ind Est <br>Ynyswen Rd<br>Treorchy<br>CF42 6DL<br>
-          <br>Tel: <br>0800 433 22 93<br>07440 01 51 14<br>
+          <br>Address: <br> Office 8 Parc Busnes&nbsp;<br>Abergorki Ind Est <br>Ynyswen Rd<br>Treorchy<br>CF42 6DL<br>
+          <br>Tel: <br>0800 4332293<br>07440 015114<br>
           <br>Email:<br>info@ecoshieldwindows.co.uk
         </p>
         <div class="u-border-1 u-border-white u-expanded-width u-line u-line-horizontal u-opacity u-opacity-50 u-line-1"></div>
-        <p class="u-align-center u-text u-text-2"> Registered Company England &amp; Wales<br>15433312
+        <p class="u-align-center u-text u-text-2"> Registered Company England &amp; Wales<br>Company Number: 15433312<br>VAT Number: 475889418
         </p>
-        <p class="u-align-center u-text u-text-3">Website ​Created By - Ecoshiled Windows 2024</p>
+        <p class="u-align-center u-text u-text-3">Website ​Created By - Ecoshiled Windows 2025</p>
       </div></footer>
   
 </body></html>
