--- a/Gallery.html
+++ b/Gallery.html
@@ -20,7 +20,7 @@
     <script type="application/ld+json">{
 		"@context": "http://schema.org",
 		"@type": "Organization",
-		"name": "Site2",
+		"name": "Decembver 2024",
 		"logo": "images/Ecoshield-LogoFinal.png"
 }</script>
     <meta name="theme-color" content="#478ac9">
@@ -28,17 +28,6 @@
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-JRE50C2H7Q"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-JRE50C2H7Q');
-</script>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-JRE50C2H7Q"></script>
   <body data-path-to-root="./" data-include-products="false" class="u-body u-xl-mode" data-lang="en"><header class=" u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-clearfix u-header u-section-row-container" id="sec-41f8" style="background-image: none"><div class="u-section-rows">
         <div class="u-clearfix u-section-row u-sticky u-sticky-2c1b u-white u-section-row-1" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="" id="sec-d51d">
           <div class="u-clearfix u-sheet u-sheet-1">
@@ -119,77 +108,95 @@
 please check out our Facebook Page for more images of our installations. </p>
         <div class="u-expanded-width u-gallery u-layout-grid u-lightbox u-show-text-on-hover u-gallery-1">
           <div class="u-gallery-inner u-gallery-inner-1">
-            <div class="u-effect-fade u-gallery-item">
-              <div class="u-back-slide" data-image-width="1080" data-image-height="1080">
-                <img class="u-back-image u-expanded u-image-contain" src="images/Andreas-113.png">
-              </div>
-              <div class="u-over-slide u-shading u-over-slide-1"></div>
-            </div>
             <div class="u-effect-fade u-gallery-item" data-image-width="1080" data-image-height="1080">
               <div class="u-back-slide" data-image-width="1080" data-image-height="1080">
                 <img class="u-back-image u-expanded u-image-contain" src="images/Andreas-1.png">
               </div>
-              <div class="u-over-slide u-shading u-over-slide-2"></div>
-            </div>
-            <div class="u-effect-fade u-gallery-item">
-              <div class="u-back-slide" data-image-width="1080" data-image-height="1080">
-                <img class="u-back-image u-expanded u-image-contain" src="images/Andreas-10.png">
-              </div>
-              <div class="u-over-slide u-shading u-over-slide-3"></div>
-            </div>
-            <div class="u-effect-fade u-gallery-item">
-              <div class="u-back-slide" data-image-width="1080" data-image-height="1080">
-                <img class="u-back-image u-expanded u-image-contain" src="images/Untitled27.png">
-              </div>
-              <div class="u-over-slide u-shading u-over-slide-4"></div>
-            </div>
-            <div class="u-effect-fade u-gallery-item" data-image-width="1080" data-image-height="1080">
-              <div class="u-back-slide" data-image-width="1080" data-image-height="1080">
-                <img class="u-back-image u-expanded u-image-contain" src="images/Andreas-132.png">
-              </div>
-              <div class="u-over-slide u-shading u-over-slide-5"></div>
-            </div>
-            <div class="u-effect-fade u-gallery-item" data-image-width="1080" data-image-height="1080">
-              <div class="u-back-slide">
-                <img class="u-back-image u-expanded u-image-contain" src="images/Andreas-3.png">
-              </div>
-              <div class="u-over-slide u-shading u-over-slide-6"></div>
-            </div>
-            <div class="u-effect-fade u-gallery-item">
-              <div class="u-back-slide" data-image-width="1080" data-image-height="1080">
-                <img class="u-back-image u-expanded u-image-contain" src="images/Andreas-12.png">
-              </div>
-              <div class="u-over-slide u-shading u-over-slide-7"></div>
+              <div class="u-over-slide u-shading u-over-slide-1"></div>
             </div>
             <div class="u-effect-fade u-gallery-item" data-image-width="1080" data-image-height="1080">
               <div class="u-back-slide">
                 <img class="u-back-image u-expanded u-image-contain" src="images/Andreas-4.png">
               </div>
-              <div class="u-over-slide u-shading u-over-slide-8"></div>
+              <div class="u-over-slide u-shading u-over-slide-2"></div>
             </div>
             <div class="u-effect-fade u-gallery-item" data-image-width="1080" data-image-height="1080">
               <div class="u-back-slide">
-                <img class="u-back-image u-expanded u-image-contain" src="images/Andreas-8.png">
+                <img class="u-back-image u-expanded u-image-contain" src="images/Untitled-52.png">
+              </div>
+              <div class="u-over-slide u-shading u-over-slide-3"></div>
+            </div>
+            <div class="u-effect-fade u-gallery-item" data-image-width="1080" data-image-height="1080">
+              <div class="u-back-slide">
+                <img class="u-back-image u-expanded u-image-contain" src="images/Untitled-26.png">
+              </div>
+              <div class="u-over-slide u-shading u-over-slide-4"></div>
+            </div>
+            <div class="u-effect-fade u-gallery-item" data-image-width="1080" data-image-height="1080">
+              <div class="u-back-slide">
+                <img class="u-back-image u-expanded u-image-contain" src="images/Untitled-29.png">
+              </div>
+              <div class="u-over-slide u-shading u-over-slide-5"></div>
+            </div>
+            <div class="u-effect-fade u-gallery-item" data-image-width="1080" data-image-height="1080">
+              <div class="u-back-slide">
+                <img class="u-back-image u-expanded u-image-contain" src="images/Untitled-28.png">
+              </div>
+              <div class="u-over-slide u-shading u-over-slide-6"></div>
+            </div>
+            <div class="u-effect-fade u-gallery-item">
+              <div class="u-back-slide" data-image-width="1080" data-image-height="1080">
+                <img class="u-back-image u-expanded u-image-contain" src="images/Andreas-113.png">
+              </div>
+              <div class="u-over-slide u-shading u-over-slide-7"></div>
+            </div>
+            <div class="u-effect-fade u-gallery-item" data-image-width="768" data-image-height="1024">
+              <div class="u-back-slide">
+                <img class="u-back-image u-expanded u-image-contain" src="images/Untitled-67.png">
+              </div>
+              <div class="u-over-slide u-shading u-over-slide-8"></div>
+            </div>
+            <div class="u-effect-fade u-gallery-item" data-image-width="1080" data-image-height="1080">
+              <div class="u-back-slide" data-image-width="1080" data-image-height="1080">
+                <img class="u-back-image u-expanded u-image-contain" src="images/Andreas-132.png">
               </div>
               <div class="u-over-slide u-shading u-over-slide-9"></div>
             </div>
             <div class="u-effect-fade u-gallery-item" data-image-width="1080" data-image-height="1080">
               <div class="u-back-slide">
-                <img class="u-back-image u-expanded u-image-contain" src="images/Andreas-9.png">
+                <img class="u-back-image u-expanded u-image-contain" src="images/Andreas-8.png">
               </div>
               <div class="u-over-slide u-shading u-over-slide-10"></div>
             </div>
             <div class="u-effect-fade u-gallery-item" data-image-width="1080" data-image-height="1080">
               <div class="u-back-slide">
-                <img class="u-back-image u-expanded u-image-contain" src="images/Andreas-101.png">
+                <img class="u-back-image u-expanded u-image-contain" src="images/Andreas-9.png">
               </div>
               <div class="u-over-slide u-shading u-over-slide-11"></div>
             </div>
-            <div class="u-effect-fade u-gallery-item">
-              <div class="u-back-slide" data-image-width="1080" data-image-height="1080">
-                <img class="u-back-image u-expanded u-image-contain" src="images/Andreas-131.png">
+            <div class="u-effect-fade u-gallery-item" data-image-width="1080" data-image-height="1080">
+              <div class="u-back-slide">
+                <img class="u-back-image u-expanded u-image-contain" src="images/Andreas-101.png">
               </div>
               <div class="u-over-slide u-shading u-over-slide-12"></div>
+            </div>
+            <div class="u-effect-fade u-gallery-item" data-image-width="1080" data-image-height="1080">
+              <div class="u-back-slide">
+                <img class="u-back-image u-expanded u-image-contain" src="images/Scottw5.png">
+              </div>
+              <div class="u-over-slide u-shading u-over-slide-13"></div>
+            </div>
+            <div class="u-effect-fade u-gallery-item" data-image-width="1080" data-image-height="1080">
+              <div class="u-back-slide">
+                <img class="u-back-image u-expanded u-image-contain" src="images/Untitled-221.png">
+              </div>
+              <div class="u-over-slide u-shading u-over-slide-14"></div>
+            </div>
+            <div class="u-effect-fade u-gallery-item" data-image-width="1080" data-image-height="1080">
+              <div class="u-back-slide">
+                <img class="u-back-image u-expanded u-image-contain" src="images/Untitled-57.png">
+              </div>
+              <div class="u-over-slide u-shading u-over-slide-15"></div>
             </div>
           </div>
         </div>
@@ -200,14 +207,14 @@ please check out our Facebook Page for more images of our installations. </p>
     
     <footer class="u-clearfix u-custom-color-6 u-footer" id="sec-59bd"><div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-text u-text-default-xs u-text-white u-text-1">Contact Us<br>
-          <br>Address: <br> Unit 16 Parc Busnes&nbsp;<br>Abergorki Ind Est <br>Ynyswen Rd<br>Treorchy<br>CF42 6DL<br>
-          <br>Tel: <br>0800 433 22 93<br>07440 01 51 14<br>
+          <br>Address: <br> Office 8 Parc Busnes&nbsp;<br>Abergorki Ind Est <br>Ynyswen Rd<br>Treorchy<br>CF42 6DL<br>
+          <br>Tel: <br>0800 4332293<br>07440 015114<br>
           <br>Email:<br>info@ecoshieldwindows.co.uk
         </p>
         <div class="u-border-1 u-border-white u-expanded-width u-line u-line-horizontal u-opacity u-opacity-50 u-line-1"></div>
-        <p class="u-align-center u-text u-text-2"> Registered Company England &amp; Wales<br>15433312
+        <p class="u-align-center u-text u-text-2"> Registered Company England &amp; Wales<br>Company Number: 15433312<br>VAT Number: 475889418
         </p>
-        <p class="u-align-center u-text u-text-3">Website ​Created By - Ecoshiled Windows 2024</p>
+        <p class="u-align-center u-text u-text-3">Website ​Created By - Ecoshiled Windows 2025</p>
       </div></footer><span style="height: 64px; width: 64px; margin-left: 0px; margin-right: auto; margin-top: 0px; background-image: none; right: 20px; bottom: 20px; padding: 15px" class="u-back-to-top u-icon u-icon-circle u-opacity u-opacity-85 u-palette-1-base" data-href="#">
         <svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 551.13 551.13"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-1d98"></use></svg>
         <svg class="u-svg-content" enable-background="new 0 0 551.13 551.13" viewBox="0 0 551.13 551.13" xmlns="http://www.w3.org/2000/svg" id="svg-1d98"><path d="m275.565 189.451 223.897 223.897h51.668l-275.565-275.565-275.565 275.565h51.668z"></path></svg>
