--- a/Brochure.html
+++ b/Brochure.html
@@ -19,7 +19,7 @@
     <script type="application/ld+json">{
 		"@context": "http://schema.org",
 		"@type": "Organization",
-		"name": "Site2",
+		"name": "Decembver 2024",
 		"logo": "images/Ecoshield-LogoFinal.png"
 }</script>
     <meta name="theme-color" content="#478ac9">
@@ -27,17 +27,6 @@
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-JRE50C2H7Q"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-JRE50C2H7Q');
-</script>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-JRE50C2H7Q"></script>
   <body data-path-to-root="./" data-include-products="false" class="u-body u-xl-mode" data-lang="en"><header class=" u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-clearfix u-header u-section-row-container" id="sec-41f8" style="background-image: none"><div class="u-section-rows">
         <div class="u-clearfix u-section-row u-sticky u-sticky-2c1b u-white u-section-row-1" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="" id="sec-d51d">
           <div class="u-clearfix u-sheet u-sheet-1">
@@ -158,14 +147,14 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
     
     <footer class="u-clearfix u-custom-color-6 u-footer" id="sec-59bd"><div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-text u-text-default-xs u-text-white u-text-1">Contact Us<br>
-          <br>Address: <br> Unit 16 Parc Busnes&nbsp;<br>Abergorki Ind Est <br>Ynyswen Rd<br>Treorchy<br>CF42 6DL<br>
-          <br>Tel: <br>0800 433 22 93<br>07440 01 51 14<br>
+          <br>Address: <br> Office 8 Parc Busnes&nbsp;<br>Abergorki Ind Est <br>Ynyswen Rd<br>Treorchy<br>CF42 6DL<br>
+          <br>Tel: <br>0800 4332293<br>07440 015114<br>
           <br>Email:<br>info@ecoshieldwindows.co.uk
         </p>
         <div class="u-border-1 u-border-white u-expanded-width u-line u-line-horizontal u-opacity u-opacity-50 u-line-1"></div>
-        <p class="u-align-center u-text u-text-2"> Registered Company England &amp; Wales<br>15433312
+        <p class="u-align-center u-text u-text-2"> Registered Company England &amp; Wales<br>Company Number: 15433312<br>VAT Number: 475889418
         </p>
-        <p class="u-align-center u-text u-text-3">Website ​Created By - Ecoshiled Windows 2024</p>
+        <p class="u-align-center u-text u-text-3">Website ​Created By - Ecoshiled Windows 2025</p>
       </div></footer><span style="height: 64px; width: 64px; margin-left: 0px; margin-right: auto; margin-top: 0px; background-image: none; right: 20px; bottom: 20px; padding: 15px" class="u-back-to-top u-icon u-icon-circle u-opacity u-opacity-85 u-palette-1-base" data-href="#">
         <svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 551.13 551.13"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-1d98"></use></svg>
         <svg class="u-svg-content" enable-background="new 0 0 551.13 551.13" viewBox="0 0 551.13 551.13" xmlns="http://www.w3.org/2000/svg" id="svg-1d98"><path d="m275.565 189.451 223.897 223.897h51.668l-275.565-275.565-275.565 275.565h51.668z"></path></svg>
