--- a/EcoShield-Windows.html
+++ b/EcoShield-Windows.html
@@ -124,7 +124,17 @@
             );
         });
     </script>
-<meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
+<meta data-intl-tel-input-cdn-path="intlTelInput/"></head><!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JRE50C2H7Q"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-JRE50C2H7Q');
+</script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JRE50C2H7Q"></script>
   <body data-path-to-root="./" data-include-products="false" class="u-body u-xl-mode" data-lang="en"><header class=" u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-clearfix u-header u-section-row-container" id="sec-41f8" style="background-image: none"><div class="u-section-rows">
         <div class="u-clearfix u-section-row u-sticky u-sticky-2c1b u-white u-section-row-1" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="" id="sec-d51d">
           <div class="u-clearfix u-sheet u-sheet-1">
@@ -210,18 +220,18 @@ to combining Value for Mone​y with a First-Class experience for all our custom
       </div>
     </section>
     <section class="u-border-2 u-border-white u-clearfix u-custom-color-6 u-section-2" id="sec-2285">
-      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+      <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-sheet-1">
         <h1 class="u-align-center u-text u-text-1" data-animation-name="customAnimationIn" data-animation-duration="1000">Our Products</h1>
       </div>
     </section>
-    <section class="u-carousel u-slide u-block-3bc6-1" id="carousel-e607" data-interval="10000" data-u-ride="false">
+    <section class="u-carousel u-slide u-block-3bc6-1" id="carousel-8f56" data-interval="10000" data-u-ride="false">
       <ol class="u-absolute-hcenter-lg u-absolute-hcenter-md u-absolute-hcenter-sm u-absolute-hcenter-xl u-carousel-indicators u-block-3bc6-7">
-        <li data-u-target="#carousel-e607" class="u-active u-grey-30" data-u-slide-to="0"></li>
-        <li data-u-target="#carousel-e607" class="u-grey-30" data-u-slide-to="1"></li>
-        <li data-u-target="#carousel-e607" class="u-grey-30" data-u-slide-to="2"></li>
-        <li data-u-target="#carousel-e607" class="u-grey-30" data-u-slide-to="3"></li>
-        <li data-u-target="#carousel-e607" class="u-grey-30" data-u-slide-to="4"></li>
-        <li data-u-target="#carousel-e607" class="u-grey-30" data-u-slide-to="5"></li>
+        <li data-u-target="#carousel-8f56" class="u-active u-grey-30" data-u-slide-to="0"></li>
+        <li data-u-target="#carousel-8f56" class="u-grey-30" data-u-slide-to="1"></li>
+        <li data-u-target="#carousel-8f56" class="u-grey-30" data-u-slide-to="2"></li>
+        <li data-u-target="#carousel-8f56" class="u-grey-30" data-u-slide-to="3"></li>
+        <li data-u-target="#carousel-8f56" class="u-grey-30" data-u-slide-to="4"></li>
+        <li data-u-target="#carousel-8f56" class="u-grey-30" data-u-slide-to="5"></li>
       </ol>
       <div class="u-carousel-inner" role="listbox">
         <div class="u-active u-align-center u-carousel-item u-clearfix u-section-3-1" src="">
@@ -363,14 +373,14 @@ tranquillity to your life.</span>
           </div>
         </div>
       </div>
-      <a class="u-absolute-vcenter u-carousel-control u-carousel-control-prev u-text-grey-30 u-block-3bc6-5" href="#carousel-e607" role="button" data-u-slide="prev">
+      <a class="u-absolute-vcenter u-carousel-control u-carousel-control-prev u-text-grey-30 u-block-3bc6-5" href="#carousel-8f56" role="button" data-u-slide="prev">
         <span aria-hidden="true">
           <svg class="u-svg-link" viewBox="0 0 477.175 477.175"><path d="M145.188,238.575l215.5-215.5c5.3-5.3,5.3-13.8,0-19.1s-13.8-5.3-19.1,0l-225.1,225.1c-5.3,5.3-5.3,13.8,0,19.1l225.1,225
                     c2.6,2.6,6.1,4,9.5,4s6.9-1.3,9.5-4c5.3-5.3,5.3-13.8,0-19.1L145.188,238.575z"></path></svg>
         </span>
         <span class="sr-only">Previous</span>
       </a>
-      <a class="u-absolute-vcenter u-carousel-control u-carousel-control-next u-text-grey-30 u-block-3bc6-6" href="#carousel-e607" role="button" data-u-slide="next">
+      <a class="u-absolute-vcenter u-carousel-control u-carousel-control-next u-text-grey-30 u-block-3bc6-6" href="#carousel-8f56" role="button" data-u-slide="next">
         <span aria-hidden="true">
           <svg class="u-svg-link" viewBox="0 0 477.175 477.175"><path d="M360.731,229.075l-225.1-225.1c-5.3-5.3-13.8-5.3-19.1,0s-5.3,13.8,0,19.1l215.5,215.5l-215.5,215.5
                     c-5.3,5.3-5.3,13.8,0,19.1c2.6,2.6,6.1,4,9.5,4c3.4,0,6.9-1.3,9.5-4l225.1-225.1C365.931,242.875,365.931,234.275,360.731,229.075z"></path></svg>
@@ -663,15 +673,15 @@ tranquillity to your life.</span>
             </div>
           </div>
         </div>
-        <div data-interval="5000" data-u-ride="carousel" class="u-carousel u-expanded-width u-slider u-slider-1" id="carousel-6b5b">
+        <div data-interval="5000" data-u-ride="carousel" class="u-carousel u-expanded-width u-slider u-slider-1" id="carousel-5980">
           <ol class="u-absolute-hcenter u-carousel-indicators u-carousel-indicators-1">
-            <li data-u-target="#carousel-6b5b" class="u-active u-active-grey-10 u-grey-30" data-u-slide-to="0"></li>
-            <li data-u-target="#carousel-6b5b" class="u-active-grey-10 u-grey-30" data-u-slide-to="1"></li>
-            <li data-u-target="#carousel-6b5b" class="u-active-grey-10 u-grey-30" data-u-slide-to="2"></li>
-            <li data-u-target="#carousel-6b5b" class="u-active-grey-10 u-grey-30" data-u-slide-to="3"></li>
-            <li data-u-target="#carousel-6b5b" class="u-active-grey-10 u-grey-30" data-u-slide-to="4"></li>
-            <li data-u-target="#carousel-6b5b" class="u-active-grey-10 u-grey-30" data-u-slide-to="5"></li>
-            <li data-u-target="#carousel-6b5b" class="u-active-grey-10 u-grey-30" data-u-slide-to="6"></li>
+            <li data-u-target="#carousel-5980" class="u-active u-active-grey-10 u-grey-30" data-u-slide-to="0"></li>
+            <li data-u-target="#carousel-5980" class="u-active-grey-10 u-grey-30" data-u-slide-to="1"></li>
+            <li data-u-target="#carousel-5980" class="u-active-grey-10 u-grey-30" data-u-slide-to="2"></li>
+            <li data-u-target="#carousel-5980" class="u-active-grey-10 u-grey-30" data-u-slide-to="3"></li>
+            <li data-u-target="#carousel-5980" class="u-active-grey-10 u-grey-30" data-u-slide-to="4"></li>
+            <li data-u-target="#carousel-5980" class="u-active-grey-10 u-grey-30" data-u-slide-to="5"></li>
+            <li data-u-target="#carousel-5980" class="u-active-grey-10 u-grey-30" data-u-slide-to="6"></li>
           </ol>
           <div class="u-carousel-inner" role="listbox">
             <div class="u-active u-align-center u-carousel-item u-container-style u-slide">
@@ -724,14 +734,14 @@ tranquillity to your life.</span>
               </div>
             </div>
           </div>
-          <a class="u-absolute-vcenter u-carousel-control u-carousel-control-prev u-spacing-5 u-text-grey-30 u-carousel-control-1" href="#carousel-6b5b" role="button" data-u-slide="prev">
+          <a class="u-absolute-vcenter u-carousel-control u-carousel-control-prev u-spacing-5 u-text-grey-30 u-carousel-control-1" href="#carousel-5980" role="button" data-u-slide="prev">
             <span aria-hidden="true">
               <svg viewBox="0 0 477.175 477.175"><path d="M145.188,238.575l215.5-215.5c5.3-5.3,5.3-13.8,0-19.1s-13.8-5.3-19.1,0l-225.1,225.1c-5.3,5.3-5.3,13.8,0,19.1l225.1,225
                     c2.6,2.6,6.1,4,9.5,4s6.9-1.3,9.5-4c5.3-5.3,5.3-13.8,0-19.1L145.188,238.575z"></path></svg>
             </span>
             <span class="sr-only">Previous</span>
           </a>
-          <a class="u-absolute-vcenter u-carousel-control u-carousel-control-next u-spacing-5 u-text-grey-30 u-carousel-control-2" href="#carousel-6b5b" role="button" data-u-slide="next">
+          <a class="u-absolute-vcenter u-carousel-control u-carousel-control-next u-spacing-5 u-text-grey-30 u-carousel-control-2" href="#carousel-5980" role="button" data-u-slide="next">
             <span aria-hidden="true">
               <svg viewBox="0 0 477.175 477.175"><path d="M360.731,229.075l-225.1-225.1c-5.3-5.3-13.8-5.3-19.1,0s-5.3,13.8,0,19.1l215.5,215.5l-215.5,215.5
                     c-5.3,5.3-5.3,13.8,0,19.1c2.6,2.6,6.1,4,9.5,4c3.4,0,6.9-1.3,9.5-4l225.1-225.1C365.931,242.875,365.931,234.275,360.731,229.075z"></path></svg>
