--- a/Brochure.html
+++ b/Brochure.html
@@ -106,50 +106,55 @@
           
         </div>
       </div></header>
-    <section class="u-align-center u-clearfix u-section-1" id="sec-e3a4">
+    <section class="u-align-center u-clearfix u-container-align-center u-section-1" id="sec-039f">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <h2 class="u-align-center u-text u-text-default u-text-1">EcoShield Brochures</h2>
+        <h2 class="u-align-center u-text u-text-default u-text-1"> EcoShield Brochures</h2>
         <p class="u-align-center u-custom-font u-font-ubuntu u-text u-text-2">Our product catalogs are fully downloadable for you to enjoy at a time which is convieniant for you.&nbsp;<br>
           <br>Please click the cover of the brochure you require for your download to begin.
         </p>
-        <div class="u-expanded-width u-gallery u-layout-horizontal u-lightbox u-show-text-always u-gallery-1" id="carousel-703a">
-          <div class="u-gallery-inner u-gallery-inner-1" role="listbox"><div class="u-border-2 u-border-grey-75 u-effect-hover-zoom u-gallery-item u-gallery-item-1" data-href="https://drive.google.com/file/d/1VxXabka7gWg11S927R0j-RRqrxNZSfyZ/view?usp=drive_link" data-target="_blank"><div class="u-back-slide" data-image-width="588" data-image-height="837"><img class="u-back-image" src="images/CompDoor.png" alt="Composite Doors">
-</div><div class="u-align-center u-over-slide u-valign-middle u-over-slide-1"><h3 class="u-align-center u-gallery-heading" style="">Composite Doors</h3>
-</div>
-</div><div class="u-border-2 u-border-grey-75 u-effect-hover-zoom u-gallery-item u-gallery-item-2" data-image-width="601" data-image-height="850" data-href="https://drive.google.com/file/d/1VJnu_yyirOJgIsC_8Sy5HQEFCQHhP13m/view?usp=drive_link" data-target="_blank"><div class="u-back-slide" data-image-width="577" data-image-height="806"><img class="u-back-image" src="images/Homelife2.png" alt="Windows, Doors &amp;amp; Conservatories">
-</div><div class="u-align-center u-over-slide u-valign-middle u-over-slide-2"><h3 class="u-align-center u-gallery-heading" style="">Windows, Doors &amp; Conservatories</h3>
-</div>
-</div><div class="u-border-2 u-border-grey-75 u-effect-hover-zoom u-gallery-item u-gallery-item-3" data-image-width="599" data-image-height="856" data-href="https://drive.google.com/file/d/1H2fwvN_xev1sxdpre_36mFbrE0OxMWf1/view?usp=drive_link" data-target="_blank"><div class="u-back-slide" data-image-width="601" data-image-height="850"><img class="u-back-image" src="images/Panel.png" alt="PVC Door Panels">
-</div><div class="u-align-center u-over-slide u-valign-middle u-over-slide-3"><h3 class="u-align-center u-gallery-heading" style="">PVC Door Panels</h3>
-</div>
-</div><div class="u-border-2 u-border-grey-75 u-effect-hover-zoom u-gallery-item u-gallery-item-4" data-image-width="682" data-image-height="681" data-href="https://drive.google.com/file/d/1Qjha3IzDF61cyTu6Oq-4Ux2MYKMqABC8/view?usp=sharing"><div class="u-back-slide"><img class="u-back-image" src="images/Screenshot2024-07-12010704.png" alt="Vertical Sliding Sash">
-</div><div class="u-align-center u-over-slide u-valign-middle u-over-slide-4"><h3 class="u-align-center u-gallery-heading">Vertical Sliding Sash</h3>
-</div>
-</div></div>
-          <a class="u-flip-horizontal u-gallery-nav u-gallery-nav-prev u-grey-70 u-icon-circle u-opacity u-opacity-70 u-spacing-10 u-text-white u-gallery-nav-1" href="#" role="button">
-            <span aria-hidden="true">
-              <svg viewBox="0 0 451.847 451.847"><path d="M97.141,225.92c0-8.095,3.091-16.192,9.259-22.366L300.689,9.27c12.359-12.359,32.397-12.359,44.751,0
-c12.354,12.354,12.354,32.388,0,44.748L173.525,225.92l171.903,171.909c12.354,12.354,12.354,32.391,0,44.744
-c-12.354,12.365-32.386,12.365-44.745,0l-194.29-194.281C100.226,242.115,97.141,234.018,97.141,225.92z"></path></svg>
-            </span>
-            <span class="sr-only">
-              <svg viewBox="0 0 451.847 451.847"><path d="M97.141,225.92c0-8.095,3.091-16.192,9.259-22.366L300.689,9.27c12.359-12.359,32.397-12.359,44.751,0
-c12.354,12.354,12.354,32.388,0,44.748L173.525,225.92l171.903,171.909c12.354,12.354,12.354,32.391,0,44.744
-c-12.354,12.365-32.386,12.365-44.745,0l-194.29-194.281C100.226,242.115,97.141,234.018,97.141,225.92z"></path></svg>
-            </span>
-          </a>
-          <a class="u-flip-horizontal u-gallery-nav u-gallery-nav-next u-grey-70 u-icon-circle u-opacity u-opacity-70 u-spacing-10 u-text-white u-gallery-nav-2" href="#" role="button">
-            <span aria-hidden="true">
-              <svg viewBox="0 0 451.846 451.847"><path d="M345.441,248.292L151.154,442.573c-12.359,12.365-32.397,12.365-44.75,0c-12.354-12.354-12.354-32.391,0-44.744
-L278.318,225.92L106.409,54.017c-12.354-12.359-12.354-32.394,0-44.748c12.354-12.359,32.391-12.359,44.75,0l194.287,194.284
-c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,248.292z"></path></svg>
-            </span>
-            <span class="sr-only">
-              <svg viewBox="0 0 451.846 451.847"><path d="M345.441,248.292L151.154,442.573c-12.359,12.365-32.397,12.365-44.75,0c-12.354-12.354-12.354-32.391,0-44.744
-L278.318,225.92L106.409,54.017c-12.354-12.359-12.354-32.394,0-44.748c12.354-12.359,32.391-12.359,44.75,0l194.287,194.284
-c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,248.292z"></path></svg>
-            </span>
-          </a>
+        <div class="u-expanded-width u-gallery u-layout-grid u-lightbox u-show-text-on-hover u-gallery-1">
+          <div class="u-gallery-inner u-gallery-inner-1">
+            <div class="u-effect-fade u-effect-hover-zoom u-gallery-item" data-href="https://drive.google.com/file/d/1VJnu_yyirOJgIsC_8Sy5HQEFCQHhP13m/view?usp=drive_link" data-target="_blank">
+              <div class="u-back-slide u-back-slide-1" data-image-width="796" data-image-height="566">
+                <img class="u-back-image u-expanded" src="images/Homelife.png" alt="Windows &amp;amp; Conservatories">
+              </div>
+              <div class="u-over-slide u-shading u-over-slide-1">
+                <h3 class="u-gallery-heading">Windows &amp; Conservatories</h3>
+              </div>
+            </div>
+            <div class="u-effect-fade u-effect-hover-zoom u-gallery-item">
+              <div class="u-back-slide u-back-slide-2" data-image-width="682" data-image-height="681">
+                <img class="u-back-image u-expanded" src="images/Screenshot2024-07-12010704.png" alt="Sliding Sash">
+              </div>
+              <div class="u-over-slide u-shading u-over-slide-2">
+                <h3 class="u-gallery-heading">Sliding Sash</h3>
+              </div>
+            </div>
+            <div class="u-effect-fade u-effect-hover-zoom u-gallery-item" data-href="https://drive.google.com/file/d/1H2fwvN_xev1sxdpre_36mFbrE0OxMWf1/view?usp=drive_link" data-target="_blank">
+              <div class="u-back-slide u-back-slide-3" data-image-width="602" data-image-height="821">
+                <img class="u-back-image u-expanded" src="images/Screenshot2025-04-03133043.png" alt="Door Panels">
+              </div>
+              <div class="u-over-slide u-shading u-over-slide-3">
+                <h3 class="u-gallery-heading">Door Panels</h3>
+              </div>
+            </div>
+            <div class="u-effect-fade u-effect-hover-zoom u-gallery-item" data-href="https://drive.google.com/file/d/1VxXabka7gWg11S927R0j-RRqrxNZSfyZ/view?usp=drive_link" data-target="_blank">
+              <div class="u-back-slide u-back-slide-4" data-image-width="588" data-image-height="837">
+                <img class="u-back-image u-expanded" src="images/CompDoor.png" alt="Composite Doors">
+              </div>
+              <div class="u-over-slide u-shading u-over-slide-4">
+                <h3 class="u-gallery-heading">Composite Doors</h3>
+              </div>
+            </div>
+            <div class="u-effect-fade u-effect-hover-zoom u-gallery-item" data-href="https://drive.google.com/file/d/1VPnk3P_YxvZ8k9-pZZuRPDr_7nOxgEuW/view?usp=drive_link" data-target="_blank">
+              <div class="u-back-slide u-back-slide-5" data-image-width="600" data-image-height="424">
+                <img class="u-back-image u-expanded" src="images/bi-folds.webp" alt="Bi-Fold Doors">
+              </div>
+              <div class="u-over-slide u-shading u-over-slide-5">
+                <h3 class="u-gallery-heading">Bi-Fold Doors</h3>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
