--- a/Contact-Form.html
+++ b/Contact-Form.html
@@ -109,7 +109,8 @@
             );
         });
     </script>
-<meta data-intl-tel-input-cdn-path="intlTelInput/"></head><!-- Google tag (gtag.js) -->
+<meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
+<!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-JRE50C2H7Q"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -190,36 +191,36 @@
       </div></header>
     <section class="u-clearfix u-image u-section-1" id="sec-6417" data-image-width="1280" data-image-height="853">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <h1 class="u-align-center u-text u-text-custom-color-6 u-text-1">Request A Free Quote</h1>
+        <h1 class="u-align-center u-text u-text-custom-color-6 u-text-1">Request A Free Quotation</h1>
         <h2 class="u-text u-text-black u-text-2"> If you are looking for Windows, Doors or a Conservatory - Simply fill in the form below for your free no-obligation quote:</h2>
         <div class="u-border-2 u-border-grey-75 u-custom-color-1 u-form u-form-1">
           <form action="https://forms.nicepagesrv.com/v2/form/process" class="u-clearfix u-form-spacing-10 u-form-vertical u-inner-form" source="email" name="form" style="padding: 10px;">
             <div class="u-form-group u-form-name u-form-group-1">
-              <label for="name-0437" class="u-label u-text-body-color">First Name</label>
-              <input type="text" placeholder="Enter your First Name" id="name-0437" name="name-1" class="u-input u-input-rectangle" required="">
+              <label for="name-0437" class="u-label u-text-body-color u-label-1">First Name</label>
+              <input type="text" placeholder="Enter your First Name" id="name-0437" name="name-1" class="u-input u-input-rectangle" required="" autofocus="autofocus">
             </div>
             <div class="u-form-group u-form-name u-form-group-2">
-              <label for="name-0437" class="u-label u-text-body-color">Last Name</label>
+              <label for="name-0437" class="u-label u-text-body-color u-label-2">Last Name</label>
               <input type="text" placeholder="Enter your Last Name" id="name-0437" name="name-2" class="u-input u-input-rectangle" required="">
             </div>
             <div class="u-form-group u-form-phone u-form-group-3">
-              <label for="phone-2d69" class="u-label u-text-body-color">Phone</label>
+              <label for="phone-2d69" class="u-label u-text-body-color u-label-3">Phone</label>
               <input type="tel" pattern="\+?\d{0,3}[\s\(\-]?([0-9]{2,3})[\s\)\-]?([\s\-]?)([0-9]{3})[\s\-]?([0-9]{2})[\s\-]?([0-9]{2})" placeholder="Enter your phone number" id="phone-2d69" name="phone" class="u-input u-input-rectangle" required="">
             </div>
             <div class="u-form-email u-form-group">
-              <label for="email-74e9" class="u-label u-text-body-color">Email</label>
+              <label for="email-74e9" class="u-label u-text-body-color u-label-4">Email</label>
               <input type="email" placeholder="Enter a valid email address" id="email-74e9" name="email" class="u-input u-input-rectangle" required="">
             </div>
             <div class="u-form-group u-form-group-5">
-              <label for="name-a637" class="u-label u-text-body-color">Street</label>
+              <label for="name-a637" class="u-label u-text-body-color u-label-5">Street</label>
               <input type="text" placeholder="Enter your street" id="name-a637" name="street" class="u-input u-input-rectangle">
             </div>
             <div class="u-form-group u-form-group-6">
-              <label for="name-a637" class="u-label u-text-body-color">Post Code</label>
+              <label for="name-a637" class="u-label u-text-body-color u-label-6">Post Code</label>
               <input type="text" placeholder="Enter your post code" id="name-a637" name="city" class="u-input u-input-rectangle">
             </div>
             <div class="u-form-group u-form-message">
-              <label for="message-74e9" class="u-label u-text-body-color">Message</label>
+              <label for="message-74e9" class="u-label u-text-body-color u-label-7">Message</label>
               <textarea placeholder="Enter your message" rows="4" cols="50" id="message-74e9" name="message" class="u-input u-input-rectangle" required=""></textarea>
             </div>
             <div class="u-align-left u-form-group u-form-submit">
