--- a/About-Us.html
+++ b/About-Us.html
@@ -26,7 +26,8 @@
     <meta property="og:title" content="About Us">
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
-  <meta data-intl-tel-input-cdn-path="intlTelInput/"></head><!-- Google tag (gtag.js) -->
+  <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
+<!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-JRE50C2H7Q"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
