--- a/Gallery.html
+++ b/Gallery.html
@@ -27,7 +27,8 @@
     <meta property="og:title" content="Gallery">
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
-  <meta data-intl-tel-input-cdn-path="intlTelInput/"></head><!-- Google tag (gtag.js) -->
+  <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
+<!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-JRE50C2H7Q"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
